<resources>
    <string name="app_name">UsChat</string>
    <!-- Strings related to login -->

    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_email_again">Retype Email</string>
    <string name="prompt_password_again">Retype Password</string>
    <string name="password_mismatch">The passwords do not match</string>
    <string name="email_mismatch">The emails do not match</string>
    <string name="action_sign_in">Login</string>
    <string name="action_register">Register</string>
    <string name="invalid_email">This email address is invalid</string>
    <string name="invalid_password">Password is too short</string>
    <string name="incorrect_password">Password is incorrect</string>
    <string name="field_required">This field is required</string>
    <string name="app_title">UsChat</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_signup">Sign up</string>
    <string name="title_activity_test">TestActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="email_mismatch_error_message">The emails provided do not match.</string>
    <string name="password_mismatch_error_message">The given passwords do not match.</string>
    <string name="password_too_short_error_message_beginning">"Passwords must have a minimum of "</string>
    <string name="password_too_short_error_message_ending">" characters."</string>
    <string name="parse_app_id">6BYovscrrL3h55LXMWgQdQ4AYm7dBQ6vO0BjYZ1e</string>
    <string name="parse_client_key">e7iTzIwBjs0pmGo7Kq36esdeqLKxHbFg3IIRkvGD</string>
    <string name="missing_field_error_message">Please enter values for all of the fields.</string>
    <string name="unsuccessful_login_error">Invalid username or password!</string>
    <string name="login_fragment_name">login</string>
    <string name="register_fragment_name">register</string>
    <string name="camera_fragment_name">camera</string>
    <string name="home_fragment_name">home</string>
    <integer name="minPasswordChars">8</integer>
    <integer name="config_mediumAnimTime">500</integer>
    <string name="title_activity_main">MainActivity</string>
    <string name="camera_log_tag">camera</string>
    <string name="people_search_hint">Search for new friends...</string>
    <string name="friends_list_title">Friends List</string>
    <string name="register_username_hint">Username</string>
    <string name="friendship_status_not_friends">Not friends.</string>
    <string name="dialog_remove_friend">Remove Friend</string>
    <string name="dialog_add_friend">Add Friend</string>
    <string name="dialog_accept_request">Accept Friend Request</string>
    <string name="dialog_reject_request">Reject Friend Request</string>
    <string name="dialog_cancel_request">Cancel Sent Request</string>
    <string name="database_friendship_status_requested">requested</string>
    <string name="database_friendship_status_friends">friends</string>
    <string name="database_friendship_status_notfriends">notFriends</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="successful_login">Login successful!</string>
    <string name="regist_success_message">You are successfully registered! You can now login.</string>
    <string name="title_activity_picture_preview">PicturePreviewActivity</string>
    <string name="picture_preview_reject">Reject</string>
    <string name="picture_preview_accept">Accept</string>
    <string name="send_chat_title">Select friends...</string>
</resources>