<com.lucascauthen.uschat.CustomLayouts.SlidingRelativeLayout
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" tools:context=".MainActivity"
        android:background="@color/background"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.333333333"
            android:gravity="center_vertical|center_horizontal"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/app_title"
                android:id="@+id/textView"
                android:textSize="30dp"
                android:textColor="@color/text_color_light" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.66666666666"
            android:gravity="center_vertical|center_horizontal">
            <ProgressBar android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:visibility="gone" />
            <ScrollView android:id="@+id/login_form" android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout android:id="@+id/email_login_form" android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:orientation="vertical">

                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:id="@+id/register_error_group"></LinearLayout>
                        <EditText
                            android:id="@+id/register_username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/register_username_hint"
                            android:inputType="textPersonName"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:layout_marginBottom="10dp"
                            android:textColorHint="@color/text_color_light"
                            android:textColor="@color/text_color_light" />

                        <EditText android:id="@+id/register_email" android:layout_width="match_parent"
                            android:layout_height="wrap_content" android:hint="@string/prompt_email"
                            android:inputType="textEmailAddress" android:maxLines="1"
                            android:singleLine="true"
                            android:layout_marginBottom="10dp"
                            android:textColorHint="@color/text_color_light"
                            android:textColor="@color/text_color_light" />

                        <EditText
                            android:id="@+id/register_email_again"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_email_again"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:layout_marginBottom="10dp"
                            android:textColorHint="@color/text_color_light"
                            android:textColor="@color/text_color_light" />

                        <EditText android:id="@+id/register_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_password"
                            android:imeActionLabel="@string/action_sign_in"
                            android:imeOptions="actionUnspecified" android:inputType="textPassword"
                            android:maxLines="1" android:singleLine="true"
                            android:layout_marginBottom="10dp"
                            android:textColorHint="@color/text_color_light"
                            android:textColor="@color/text_color_light" />

                        <EditText
                            android:id="@+id/register_password_again"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_password_again"
                            android:imeActionLabel="@string/action_sign_in"
                            android:imeOptions="actionUnspecified"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:layout_marginBottom="10dp"
                            android:textColorHint="@color/text_color_light"
                            android:textColor="@color/text_color_light" />

                        <Button android:id="@+id/register_button" style="?android:textAppearanceSmall"
                            android:layout_width="match_parent" android:layout_height="wrap_content"
                            android:layout_marginTop="16dp" android:text="@string/action_register"
                            android:textStyle="bold"
                            android:textColor="@color/text_color_light"
                            android:background="@drawable/button_bg"
                            />

                    </LinearLayout>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>

    </LinearLayout>
</com.lucascauthen.uschat.CustomLayouts.SlidingRelativeLayout>