<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" tools:context=".MainActivity"
        android:background="@color/accent_light"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true">

        <LinearLayout
            android:id="@+id/ll1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.666666666"
            android:gravity="center_vertical|center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/app_title"
                android:id="@+id/login_title"
                android:textSize="30dp"
                android:textColor="@color/text_color_white" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.333333333"
            android:gravity="center_vertical|center_horizontal">
            <ProgressBar android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:visibility="gone" />
                <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout android:id="@+id/email_login_form" android:layout_width="match_parent"
                        android:layout_height="0dp" android:orientation="vertical"
                        android:layout_weight="1">

                        <EditText android:id="@+id/login_username_field" android:layout_width="match_parent"
                            android:layout_height="wrap_content" android:hint="@string/prompt_username"
                            android:inputType="textEmailAddress" android:maxLines="1"
                            android:singleLine="true"
                            android:layout_marginBottom="10dp"
                            android:textColorHint="@color/text_color_white"
                            android:textColor="@color/text_color_white"
                            android:text="lucas" />

                        <EditText android:id="@+id/login_password_field" android:layout_width="match_parent"
                            android:layout_height="wrap_content" android:hint="@string/prompt_password"
                            android:imeActionLabel="@string/action_sign_in"
                            android:imeOptions="actionUnspecified" android:inputType="textPassword"
                            android:maxLines="1" android:singleLine="true"
                            android:layout_marginBottom="10dp"
                            android:textColorHint="@color/text_color_white"
                            android:textColor="@color/text_color_white"
                            android:text="password" />

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal">

                            <Button android:id="@+id/login_signin_button" style="?android:textAppearanceSmall"
                                android:layout_width="wrap_content" android:layout_height="wrap_content"
                                android:text="@string/action_sign_in"
                                android:textStyle="bold"
                                android:textColor="@color/text_color_white"
                                android:background="@drawable/button_bg"
                                android:layout_weight="1" />

                            <Button
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/action_signup"
                                android:id="@+id/login_signup_button"
                                android:textColor="@color/text_color_white"
                                android:background="@drawable/button_bg"
                                android:layout_weight="1"
                                android:layout_marginLeft="16dp"></Button>
                        </LinearLayout>

                    </LinearLayout>
                </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <ProgressBar
        android:id="@+id/login_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:indeterminate="true"
        android:visibility="gone"
        android:background="#ccffffff"
        />
</RelativeLayout>